# workout.md

./: .gitignore  skills-lock.json  workout-md-product-spec.md
WorkoutMD/: Info.plist  WorkoutMD.entitlements  project.yml
WorkoutMD/Sources/: CoachView.swift  ControlsView.swift  DoneView.swift  EffortControl.swift  Haptics.swift  HistoryView.swift  LaunchScreen.storyboard  MarkdownGenerator.swift  MockHistory.swift  Models.swift  OnboardingView.swift  PersistenceModels.swift  RunnerView.swift  SessionView.swift  StepPageView.swift  Theme.swift  TodayView.swift  WorkoutListView.swift  WorkoutMDApp.swift
WorkoutMD/Sources/Bridge/: WorkoutCore.h
WorkoutMD/Sources/Coach/: CoachController.swift  CoachReviewStore.swift  DoctrineStore.swift  ThinkStripper.swift
WorkoutMD/Sources/Fabric/: FabricController.swift  FabricView.swift
WorkoutMD/Sources/Plans/: DefaultPlanSeed.swift  GeneratePlanSheet.swift  NewPlanSheet.swift  PlanConversion.swift  PlanEditInterpreter.swift  PlanEditorView.swift  PlanGeneration.swift  PlanModels.swift  PlanStore.swift  PlansListView.swift  WhatsNextView.swift
WorkoutMD/Sources/Settings/: AppSettings.swift  BYOKProviderConnector.swift  CoachSecrets.swift  FabricSecrets.swift  SettingsView.swift
WorkoutMD/Sources/Sync/: GitHubAPI.swift  GitHubAuth.swift  GitHubSync.swift  ICloudSync.swift  SyncManager.swift
WorkoutMD/Tests/WorkoutMDTests/: BYOKProviderConnectorTests.swift  ThinkStripperTests.swift
WorkoutMD/WorkoutMD.xcodeproj/: project.pbxproj
WorkoutMD/docs/: byok-integration.md
WorkoutMD/docs/wiki/: AGENTS.md  _index.md
core/workout-core/: Cargo.toml
core/workout-core/src/: lib.rs
core/workout-core/src/coach/: mod.rs  tools.rs
core/workout-core/src/nostr/: mod.rs  wire.rs
core/workout-core/tests/: nip29_join_request_live.rs  nip29_live.rs  ollama_live.rs
docs/wiki/: _index.md
docs/wiki/_citations/: AGENTS.md
docs/wiki/episodes/: 2026-07-09-42f3cd42f2de-75af564c-1-html-web-prototype-native-swiftui-ios.md  2026-07-09-42f3cd42f2de-75af564c-2-today-screen-interaction-model-list-view.md  2026-07-09-42f3cd42f2de-75af564c-3-circuit-superset-support-added-as-first.md  2026-07-10-42f3cd42f2de-75af564c-1-per-set-stateful-model-replaces-active.md  2026-07-10-42f3cd42f2de-75af564c-1-real-persisted-plan-model-replaces-hardcoded.md  2026-07-10-42f3cd42f2de-75af564c-1-set-input-redesign-floating-lines-reps.md  2026-07-10-42f3cd42f2de-75af564c-2-coach-grounding-architecture-goals-doctrine-external.md  2026-07-10-42f3cd42f2de-75af564c-2-glasseffect-compositing-smears-interactive-controls-glass.md  2026-07-10-42f3cd42f2de-75af564c-2-reasoning-model-think-tag-stripping-in.md  2026-07-10-42f3cd42f2de-75af564c-3-ios-slide-to-power-off-adopted.md  2026-07-10-42f3cd42f2de-75af564c-3-nip-29-join-request-kind-9021.md  2026-07-10-42f3cd42f2de-75af564c-3-reasoning-model-think-tag-leak-root.md  2026-07-10-42f3cd42f2de-75af564c-4-github-oauth-device-flow-replaces-pat.md  2026-07-10-42f3cd42f2de-75af564c-4-icloud-entitlement-triggers-swiftdata-cloudkit-auto.md  2026-07-10-42f3cd42f2de-75af564c-5-mockworkout-replaced-by-real-planrecord-as.md  2026-07-10-42f3cd42f2de-75af564c-5-set-input-ui-redesign-tap-to.md  2026-07-10-42f3cd42f2de-75af564c-6-nip-29-join-request-kind-9021.md  2026-07-10-42f3cd42f2de-75af564c-7-productization-finishing-pass-app-icon-onboarding.md  2026-07-10-43fd928f6da0-b40f7d8e-1-code-signing-switched-from-disabled-simulator.md  2026-07-10-43fd928f6da0-b40f7d8e-1-code-signing-team-switched-from-personal.md  2026-07-10-43fd928f6da0-b40f7d8e-1-switch-ios-project-from-no-signing.md  2026-07-10-576bd63b163a-031f8906-1-overlay-after-ignoressafearea-double-counts-safe.md  2026-07-10-576bd63b163a-031f8906-1-overlay-safe-area-double-count-root.md  2026-07-10-576bd63b163a-031f8906-1-swiftui-overlay-safe-area-double-counting.md  2026-07-10-576bd63b163a-031f8906-2-compact-liquid-glass-toolbar-replaces-oversized.md  2026-07-10-576bd63b163a-031f8906-2-effort-control-redesigned-from-oversized-bar.md  2026-07-10-576bd63b163a-031f8906-3-countdown-generalized-to-all-timed-pages.md  2026-07-10-576bd63b163a-031f8906-3-rest-countdown-generalized-to-all-timed.md  2026-07-10-576bd63b163a-031f8906-3-rest-page-timer-generalized-from-static.md  AGENTS.md
docs/wiki/guides/: AGENTS.md  agent-workflow-and-roles.md  coach-configuration-and-behavior.md  coach-screen-and-plan-mutation.md  code-signing-and-provisioning.md  data-model-and-markdown-storage.md  effort-feedback-dial.md  glass-ui-design-system.md  native-ios-build-setup.md
docs/wiki/nouns/: AGENTS.md  blockkind.md  coach-agent-nostr.md  coach-context.md  coach-screen.md  coach.md  coachview.md  controlsview.md  deviations.md  doneview.md  effortcontrol.md  exercise.md  ghost-targets.md  inline-nudges.md  kind-9.md  markdown-as-substrate.md  markdown-in-this-project.md  markdown.md  moodkey.md  onboardingview.md  plan-calendar.md  runner-tiktok-style.md  runnerview.md  sessionview.md  settarget.md  steppageview.md  tiktok-style-runner-app-concept.md  today-screen.md  today-the-home.md  todayview.md  topstripmetrics.md  what-should-i-do-affordance.md  what-should-i-do-next-affordance.md  whatsnextview.md  workout-md-ios-prototype.md  workout-md.md  workoutblock-blockkind.md  (+2 more)
prototype/: index.html
(+135 files in other folders)
