[package]
name = "workout-core"
version = "0.1.0"
edition = "2021"
description = "Workout.md Rust core — UniFFI facade exposed to the native iOS shell."
publish = false

[lib]
name = "workout_core"
# `staticlib` so the iOS shell can link `-lworkout_core`; `cdylib` so
# `uniffi-bindgen generate --library` can introspect the compiled interface;
# `rlib` so Rust-side consumers (tests, future desktop/CLI hosts) reach the
# crate through normal Rust paths.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.29" }

# LLM coach engine (rig.rs). CRITICAL for iOS: TLS must go through rustls,
# never OpenSSL, AND the rustls crypto backend must be `ring`, not
# `aws-lc-rs` — rig-core's own `rustls` feature turns on reqwest's default
# rustls backend, which is `aws-lc-rs`. `aws-lc-sys`'s hand-written assembly
# (s2n-bignum) references `___chkstk_darwin`, which is not resolvable when
# linking a `staticlib`/`cdylib` for the `aarch64-apple-ios` *device* target
# (confirmed during development: the simulator slice links fine, the device
# slice fails with "symbol(s) not found for architecture arm64"). `ring`
# builds and links cleanly for both device and simulator, so:
#   - rig-core is pulled with only its `reqwest` feature (HTTP transport),
#     deliberately *not* `rustls`, so it never activates reqwest's
#     aws-lc-rs-backed `rustls` feature.
#   - `reqwest` is depended on directly with `rustls-no-provider`, which
#     wires up rustls/hyper-rustls without hard-selecting a crypto backend.
#   - `rustls` and `hyper-rustls` are depended on directly with their `ring`
#     feature, so `ring` is the only crypto backend actually compiled in.
#   - `coach::ensure_rustls_ring_provider()` installs
#     `rustls::crypto::ring::default_provider()` as the process-wide default
#     at `CoachEngine` construction time, since `rustls-no-provider` leaves
#     that unset otherwise.
rig-core = { version = "0.36", default-features = false, features = [
    "reqwest",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "json",
    "stream",
    "multipart",
    "charset",
    "http2",
    "system-proxy",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "ring",
    "http1",
    "tls12",
    "logging",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"

# Nostr / NIP-29 fabric module. `nostr-sdk`'s default features pull no HTTP
# client at all (its own Cargo.toml has `default = []`, and neither it nor
# `nostr-relay-pool`/`async-wsocket` depend on `reqwest`/`native-tls`/
# `openssl-sys` anywhere in the graph — verified via `cargo tree`). Its
# websocket transport (`async-wsocket` -> `tokio-tungstenite` ->
# `tokio-rustls`) depends on `tokio-rustls` with `default-features = false,
# features = ["ring", "tls12"]` at the manifest level (see
# `async-wsocket`'s Cargo.toml), so it can never activate `aws-lc-rs` on its
# own the way `rig-core`/`reqwest`'s default rustls backend does (see the
# comment on the block above) — it just needs *some* rustls crypto provider
# installed process-wide before its first connection, which
# `coach::ensure_rustls_ring_provider()` (reused by
# `nostr::NostrCoach::new()`) already provides.
nostr-sdk = "0.44"

[features]
# `bindgen` gates this crate's own `uniffi-bindgen` binary behind an opt-in
# feature so a normal `cargo build`/`cargo check` never links the UniFFI CLI.
# There is no shared/global `uniffi-bindgen` guaranteed to match this crate's
# `uniffi` version, so the crate carries its own bindgen entry point built
# from the exact same dependency graph as the library it introspects.
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen"]
